<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DatabaseSettingActivity">

    <TextView
        android:id="@+id/tv_database_setting"
        android:layout_width="327dp"
        android:layout_height="60dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="54dp"
        android:text="@string/tv_database_setting"
        android:textColor="#0F7569"
        android:textCursorDrawable="@color/colorAccent"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_first_name_database"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="30dp"
        android:autofillHints="@string/first_name"
        android:ems="10"
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_database_setting" />

    <EditText
        android:id="@+id/et_last_name_database"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:autofillHints="@string/last_name"
        android:ems="10"
        android:hint="@string/last_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_first_name_database" />

    <EditText
        android:id="@+id/et_department_database"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:autofillHints="@string/department"
        android:ems="10"
        android:hint="@string/department"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_last_name_database" />

    <Button
        android:id="@+id/btn_show_datas"
        android:layout_width="370dp"
        android:layout_height="30dp"
        android:layout_marginStart="21dp"
        android:layout_marginEnd="21dp"
        android:layout_marginBottom="20dp"
        android:background="#0F7569"
        android:text="@string/btn_show_datas"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/btn_delete_hobbies"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_delete_all_datas"
        android:layout_width="370dp"
        android:layout_height="30dp"
        android:layout_marginStart="21dp"
        android:layout_marginEnd="21dp"
        android:layout_marginBottom="20dp"
        android:background="#0F7569"
        android:text="@string/btn_delete_datas"
        android:textColor="#FFFFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/btn_back_database"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_add_new_element"
        android:layout_width="170dp"
        android:layout_height="30dp"
        android:layout_marginStart="120dp"
        android:layout_marginEnd="121dp"
        android:layout_marginBottom="56dp"
        android:background="#0F7569"
        android:text="@string/btn_add_new_data"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/btn_show_datas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_back_database"
        android:layout_width="370dp"
        android:layout_height="30dp"
        android:layout_marginStart="21dp"
        android:layout_marginEnd="21dp"
        android:layout_marginBottom="50dp"
        android:background="#0F7569"
        android:text="@string/back"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_delete_hobbies"
        android:layout_width="370dp"
        android:layout_height="30dp"
        android:layout_marginStart="21dp"
        android:layout_marginEnd="21dp"
        android:layout_marginBottom="20dp"
        android:background="#0F7569"
        android:text="@string/delete_hobbies"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/btn_delete_all_datas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>